--- a/client/src/index.css
+++ b/client/src/index.css
@@ -447,6 +447,12 @@ body {
   margin-top: 2px;
 }
 
+.header-subtitle {
+  font-weight: 300;
+  text-transform: uppercase;
+  opacity: 0.6;
+}
+
 .panel-body {
   padding: 20px;
 }
